2001-08-28  Jody Goldberg <jgoldberg@home.com>

	* fn-stat.c (gnumeric_logest) : we appear to be using affine as an
	  offset, ensure that it is 0 or 1.
	  The statistics are still on the reverse order for some reason.

2001-08-26  Jody Goldberg <jgoldberg@home.com>

	* fn-information.c (gnumeric_expression) : fix typo.
	  and generate the expression using the source cell rather than then
	  position with the call to expression.

2001-08-20  Jody Goldberg <jgoldberg@home.com>

	* Release 0.70

2001-08-11  Jody Goldberg <jgoldberg@home.com>

	* Release 0.69

2001-07-30  Jody Goldberg <jgoldberg@home.com>

	* fn-lookup.c (gnumeric_indirect) : modernize a bit.

2001-07-27  Morten Welinder  <terra@diku.dk>

	* fn-stat.c (gnumeric_quartile, gnumeric_percentile,
 	gnumeric_large, gnumeric_small): Cleanup.

2001-07-20  Morten Welinder  <terra@diku.dk>

	* fn-stat.c (gnumeric_mode): Clean up.
	(float_hash): try to adhere to the C standard.

2001-07-17  Jody Goldberg <jgoldberg@home.com>

	* Release 0.68

2001-07-12  Morten Welinder  <terra@diku.dk>

	* fn-math.c (gnumeric_multinomial): Cleanup.
	(gnumeric_lcm): Fix.

2001-07-07  Morten Welinder  <terra@diku.dk>

	* fn-information.c (gnumeric_expression, help_expression): Moved
 	from fn-string.c.

2001-07-07  Morten Welinder  <terra@diku.dk>

	* fn-string.c (gnumeric_concatenate): Handle errors properly.
  	Don't leak like crazy.

2001-07-07  Almer S. Tigelaar  <almer@gnome.org>

	* fn-string.c (gnumeric_char): Beautify.
	(gnumeric_code): Simplify, no need to check type.
	(gnumeric_lower): Use gstrdown.
	(gnumeric_mid): Beautify, no need to check type.
	(gnumeric_upper): Use gstrup.
	(gnumeric_concatenate): Drastically simplify using GString.
	(gnumeric_replace): Idem.

2001-06-28  Jody Goldberg <jgoldberg@home>

	* Release 0.67

2001-06-27  Jody Goldberg <jgoldberg@home.com>

	* Release 0.66

2001-06-26  Jody Goldberg <jgoldberg@home.com>

	* fn-lookup.c (lookup_functions_init) : fix the args for hyperlink.